Update more dependencies.